# odin-notes-tw

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE.md  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/skills/odin-lecture/: SKILL.md
.github/workflows/: ci.yml  deploy.yml  link-check.yml
adr/: 0001-use-mkdocs-material.md  0002-deploy-via-github-actions-pages.md  0003-client-side-reading-progress.md  0004-ai-generated-content-with-review.md
docs/: index.md
docs/about/: license.md
docs/assets/: extra.css  reading-progress.js
docs/foundations/: index.md
docs/foundations/foundations/: 01-how-this-course-will-work.md  02-introduction-to-web-development.md  03-motivation-and-mindset.md  04-asking-for-help.md  05-join-the-odin-community.md  06-how-does-the-web-work.md  07-installations.md  08-text-editors.md  09-command-line-basics.md  10-setting-up-git.md  11-introduction-to-git.md  12-git-basics.md  13-introduction-to-html-and-css.md  14-elements-and-tags.md  15-html-boilerplate.md  16-working-with-text.md  17-lists.md  18-links-and-images.md  19-commit-messages.md  20-recipes.md  21-intro-to-css.md  22-the-cascade.md  23-inspecting-html-and-css.md  24-the-box-model.md  25-block-and-inline.md  26-introduction-to-flexbox.md  27-growing-and-shrinking.md  28-axes.md  29-alignment.md  30-landing-page.md  31-variables-and-operators.md  32-installing-node-js.md  33-data-types-and-conditionals.md  (+14 more)
docs/full-stack-javascript/: index.md
scripts/: build_index.py
templates/: lecture.md
tests/: test_build_index.py
(+159 files in other folders)
